--- a/authors.html
+++ b/authors.html
@@ -1,48 +1,36 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-	<link rel="stylesheet" type="text/css" href="/theme/css/style.css">
-	<!--<link rel="stylesheet/less" type="text/css" href="/theme/css/style.less">-->
-	<!--<script src="/theme/js/less.js" type="text/javascript"></script>-->
-	<link rel="stylesheet" type="text/css" href="/theme/css/pygments.css">
-	<link href='//fonts.googleapis.com/css?family=Open+Sans:800,400,300|Inconsolata' rel='stylesheet' type='text/css'>
-
-	<link href="/" type="application/atom+xml" rel="alternate" title="blog ATOM Feed" />
-
-
-		<title>blog - Authors</title>
-		<meta charset="utf-8" />
-</head>
-<body>
-	<section id="sidebar">
-		<figure id="user_logo">
-            <a href=""><div class="logo">&nbsp;</div></a>
-		</figure>
-
-		<div class="user_meta">
-            <h1 id="user"><a href="" class="">Lucy Wyman</a></h1>
-			<h2></h2>
-			<ul>
-					<li><a href="http://getpelican.com/">Pelican</a></li>
-					<li><a href="http://python.org/">Python.org</a></li>
-					<li><a href="http://jinja.pocoo.org/">Jinja2</a></li>
-					<li><a href="#">You can modify those links in your config file</a></li>
-			</ul>
-		</div>
-		<footer>
-			<address>
-				Powered by <a href="http://pelican.notmyidea.org/">Pelican</a>,
-		                theme by <a href="https://github.com/wting/pelican-svbtle">wting</a>.
-			</address>
-		</footer>
-	</section>
-
-	<section id="posts">
+<html lang='en'>
+    <head>
+    <title>blog </title>
+    <meta charset='utf-8'>
+    <script src="theme/js/jquery-1.11.2.js"></script>
+    <link rel='stylesheet' href='theme/css/main.css' type='text/css'>
+    <link rel="stylesheet" href="theme/css/slicknav.css" />
+    <script src="theme/css/jquery.slicknav.min.js"></script>
+    <script>
+        $(document).ready(function(){
+            $('#menu').slicknav({
+                label: ''
+            });
+        });
+    </script>
+    <meta name='viewport' content='width=device-width'>
+    </head>	<body>
+		<nav>
+			<h3><a href='/'>Lucy Wyman</a></h3>
+			<a href='/about.html'>About</a>
+		</nav>
+		<main>
     <h1>Authors on blog</h1>
 
     <ul>        <li><a href="/author/lucy-wyman.html">Lucy Wyman</a> (1)</li>
     </ul>
-	</section>
-
-</body>
+		</main>
+		<div class='footer'>
+			<a href='https://github.com/lucywyman'><img class='social' src='theme/images/github-icon.png'></a>
+			<a href='http://linkedin.com/pub/lucy-wyman/70/553/6a7/'><img class='social' src='theme/images/linkedin.png'></a>
+			<a href='https://plus.google.com/107251431728646146032/posts'><img class='social' src='theme/images/google-plus.png'></a>
+		</div>
+	</body>
 </html>
+
