--- a/tags.html
+++ b/tags.html
@@ -1,62 +1,37 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-	<link rel="stylesheet" type="text/css" href="/theme/css/style.css">
-	<!--<link rel="stylesheet/less" type="text/css" href="/theme/css/style.less">-->
-	<!--<script src="/theme/js/less.js" type="text/javascript"></script>-->
-	<link rel="stylesheet" type="text/css" href="/theme/css/pygments.css">
-	<link href='//fonts.googleapis.com/css?family=Open+Sans:800,400,300|Inconsolata' rel='stylesheet' type='text/css'>
+<html lang='en'>
+    <head>
+    <title>blog </title>
+    <meta charset='utf-8'>
+    <script src="theme/js/jquery-1.11.2.js"></script>
+    <link rel='stylesheet' href='theme/css/main.css' type='text/css'>
+    <link rel="stylesheet" href="theme/css/slicknav.css" />
+    <script src="theme/css/jquery.slicknav.min.js"></script>
+    <script>
+        $(document).ready(function(){
+            $('#menu').slicknav({
+                label: ''
+            });
+        });
+    </script>
+    <meta name='viewport' content='width=device-width'>
+    </head>	<body>
+		<nav>
+			<h3><a href='/'>Lucy Wyman</a></h3>
+			<a href='/about.html'>About</a>
+		</nav>
+		<main>
 
-	<link href="/" type="application/atom+xml" rel="alternate" title="blog ATOM Feed" />
-
-
-		<title>blog</title>
-		<meta charset="utf-8" />
-</head>
-<body>
-	<section id="sidebar">
-		<figure id="user_logo">
-            <a href=""><div class="logo">&nbsp;</div></a>
-		</figure>
-
-		<div class="user_meta">
-            <h1 id="user"><a href="" class="">Lucy Wyman</a></h1>
-			<h2></h2>
-			<ul>
-					<li><a href="http://getpelican.com/">Pelican</a></li>
-					<li><a href="http://python.org/">Python.org</a></li>
-					<li><a href="http://jinja.pocoo.org/">Jinja2</a></li>
-					<li><a href="#">You can modify those links in your config file</a></li>
-			</ul>
+<dl id="tag_list">
+	<ul>
+	</ul>
+</dl>
+		</main>
+		<div class='footer'>
+			<a href='https://github.com/lucywyman'><img class='social' src='theme/images/github-icon.png'></a>
+			<a href='http://linkedin.com/pub/lucy-wyman/70/553/6a7/'><img class='social' src='theme/images/linkedin.png'></a>
+			<a href='https://plus.google.com/107251431728646146032/posts'><img class='social' src='theme/images/google-plus.png'></a>
 		</div>
-		<footer>
-			<address>
-				Powered by <a href="http://pelican.notmyidea.org/">Pelican</a>,
-		                theme by <a href="https://github.com/wting/pelican-svbtle">wting</a>.
-			</address>
-		</footer>
-	</section>
-
-	<section id="posts">
-	<header>
-		<h1>Lucy Wyman's blog</h1>
-		<h3>
-			<script type="text/javascript">
-				var currentDate = new Date();
-				var day = currentDate.getDate();
-				var monthNames = [ "Jan", "Feb", "Mar", "Apr", "May", "June", "July", "Aug", "Sep", "Oct", "Nov", "Dec" ];
-				var month = monthNames[currentDate.getMonth()].toUpperCase();
-				var year = currentDate.getFullYear();
-				document.write(month + " " + day + ", " + year);
-			</script>
-		</h3>
-	</header>
-
-	<dl id="tag_list">
-		<ul>
-		</ul>
-	</dl>
-	</section>
-
-</body>
+	</body>
 </html>
+
