Update scale post

--- a/scale-14x.html
+++ b/scale-14x.html
@@ -118,6 +118,27 @@ any time soon.</p>
 </div>
 <div class="section" id="randal-schwartz-intro-to-dart">
 <h3>Randal Schwartz, Intro to Dart</h3>
+<p>Honestly, I spent this whole talk just working on making this blog. Woops.</p>
+</div>
+<div class="section" id="other-things-i-saw-today">
+<h3>Other Things I Saw Today</h3>
+<ul class="simple">
+<li>Two pugs</li>
+<li>Three grown men yell group hug and execute</li>
+<li>The sun</li>
+</ul>
+<p>I spent the rest of the day doing homework and travelling. It's amazing how
+much effort it takes to move a human from A to B, and I have to say I was
+so exhausted by the time we got to Corvallis around 12:30.  Lesson learned:
+I am not a Sunday-worker. Sundays are for blankets and tea and tv, not
+late night flights and talking to other humans.  Overall, SCaLE was
+less stressful than I thought it would be, and I don't regret going
+like I thought I would. Maybe that sounds lukewarm, and I have to say
+it is a <em>very</em> well run conference, and my particular sentiments don't
+reflect a lack of effort on the part of the organizers,
+presenters, or exhibitors. Objectively, it's a great conference.  I'm
+not really sure how to end this post. I might think of something
+better later. For now, ciao gentle reader. You excellent human you.</p>
 </div>
 </div>
 
