--- a/about.html
+++ b/about.html
@@ -1,21 +1,22 @@
 <!DOCTYPE html>
 <html lang='en'>
-    <head>
-    <title>blog </title>
-    <meta charset='utf-8'>
-    <script src="theme/js/jquery-1.11.2.js"></script>
-    <link rel='stylesheet' href='theme/css/main.css' type='text/css'>
-    <link rel="stylesheet" href="theme/css/slicknav.css" />
-    <script src="theme/css/jquery.slicknav.min.js"></script>
-    <script>
-        $(document).ready(function(){
-            $('#menu').slicknav({
-                label: ''
-            });
-        });
-    </script>
-    <meta name='viewport' content='width=device-width'>
-    </head>	<body>
+<head>
+<title>blog </title>
+<meta charset='utf-8'>
+<script src="theme/js/jquery-1.11.2.js"></script>
+<link rel='stylesheet' href='theme/css/main.css' type='text/css'>
+<script>
+(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+	(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+	m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+ga('create', 'UA-48093989-5', 'auto');
+ga('send', 'pageview');
+
+</script>
+<meta name='viewport' content='width=device-width'>
+</head>	<body>
 		<nav>
 			<h3><a href='/'>Lucy Wyman</a></h3>
 			<a href='/about.html'>About</a>
