Add ready player one book review

--- a/authors.html
+++ b/authors.html
@@ -1,8 +1,19 @@
 <!DOCTYPE html>
 <html lang='en'>
 <head>
-<title>blog </title>
+<title>blog</title>
 <meta charset='utf-8'>
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="description" content="Cooking and Code: simple, healthy, easy, delicious recipes curated by me, Lucy Wyman">
+<meta name="keywords" content="blog, code, lucy, wyman">
+<meta name="robots" content="index, follow">
+<meta property="og:locale" content="en_US" />
+<meta property="og:type" content="website" />
+<meta property="og:title" content="Blog" />
+<meta property="og:url" content="http://blog.lucywyman.me" />
+<meta property="og:site_name" content="Blog" />
+
 <script src="theme/js/jquery-1.11.2.js"></script>
 <link rel='stylesheet' href='theme/css/main.css' type='text/css'>
 <script>
@@ -15,7 +26,6 @@ ga('create', 'UA-48093989-5', 'auto');
 ga('send', 'pageview');
 
 </script>
-<meta name='viewport' content='width=device-width'>
 </head>	<body>
 		<nav>
 			<h3><a href='/'>Lucy Wyman</a></h3>
@@ -24,7 +34,7 @@ ga('send', 'pageview');
 		<main>
     <h1>Authors on blog</h1>
 
-    <ul>        <li><a href="/author/lucy-wyman.html">Lucy Wyman</a> (1)</li>
+    <ul>        <li><a href="/author/lucy-wyman.html">Lucy Wyman</a> (2)</li>
     </ul>
 		</main>
 		<div class='footer'>
