--- a/archives.html
+++ b/archives.html
@@ -1,8 +1,19 @@
 <!DOCTYPE html>
 <html lang='en'>
 <head>
-<title>blog </title>
+<title>blog</title>
 <meta charset='utf-8'>
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="description" content="Cooking and Code: simple, healthy, easy, delicious recipes curated by me, Lucy Wyman">
+<meta name="keywords" content="blog, code, lucy, wyman">
+<meta name="robots" content="index, follow">
+<meta property="og:locale" content="en_US" />
+<meta property="og:type" content="website" />
+<meta property="og:title" content="Blog" />
+<meta property="og:url" content="http://blog.lucywyman.me" />
+<meta property="og:site_name" content="Blog" />
+
 <script src="theme/js/jquery-1.11.2.js"></script>
 <link rel='stylesheet' href='theme/css/main.css' type='text/css'>
 <script>
@@ -15,7 +26,6 @@ ga('create', 'UA-48093989-5', 'auto');
 ga('send', 'pageview');
 
 </script>
-<meta name='viewport' content='width=device-width'>
 </head>	<body>
 		<nav>
 			<h3><a href='/'>Lucy Wyman</a></h3>
@@ -25,6 +35,8 @@ ga('send', 'pageview');
 <h1>Archives for blog</h1>
 
 <dl>
+    <dt>02.23.2016</dt>
+    <dd><a href="/ready-player-one.html">Book Review: Ready Player One</a></dd>
     <dt>01.23.2016</dt>
     <dd><a href="/scale-14x.html">SCaLE 14x: My Experience</a></dd>
 </dl>
