Add hmmamg post to actual site

--- a/categories.html
+++ b/categories.html
@@ -35,6 +35,7 @@ ga('send', 'pageview');
 <ul>
     <li><a href="/category/book-review.html">book-review</a></li>
     <li><a href="/category/conferences.html">conferences</a></li>
+    <li><a href="/category/misc.html">misc</a></li>
 </ul>
 		</main>
 		<div class='footer'>
