--- a/self-driving-cars.html
+++ b/self-driving-cars.html
@@ -32,18 +32,24 @@ ga('send', 'pageview');
 			<a href='/about.html'>About</a>
 		</nav>
 		<main>
-<h1>Archives for blog</h1>
+<h2>Why I'm Not Afraid of Self-Driving Cars</h2>
+<p>02.26.2016</p>
+<p>Among the ranks of podcasts NPR creates, one is an aggregated feed of
+technical bits from a variety of news podcasts -- basically a curated, audio
+Hacker News.  This past week, everyone has been
+FREAKING OUT about the WFC fight of the century, Apple vs. FBI, in a
+non-stop stream of uninformed (or worse, half-informed) newscasters questioning
+whether Apple is doing the right thing by protecting their users privacy*.
+However, in the breaths between FREAKING OUT, there were a few bits on
+self-driving cars, and whether America is ready for them.  The bit focused
+on folks saying they didn't trust self-driving cars</p>
+<ul class="simple">
+<li>I'll spare you the drama and to say I side very strongly with Apple, and
+if you don't care to read more about the issue you should as well.  Take
+it from an engineer.</li>
+</ul>
 
-<dl>
-    <dt>03.1.2016</dt>
-    <dd><a href="/hunger-makes-me-a-modern-girl.html">Book Review: Hunger Makes Me A Modern Girl</a></dd>
-    <dt>02.26.2016</dt>
-    <dd><a href="/self-driving-cars.html">Why I'm Not Afraid of Self-Driving Cars</a></dd>
-    <dt>02.23.2016</dt>
-    <dd><a href="/ready-player-one.html">Book Review: Ready Player One</a></dd>
-    <dt>01.23.2016</dt>
-    <dd><a href="/scale-14x.html">SCaLE 14x: My Experience</a></dd>
-</dl>
+
 		</main>
 		<div class='footer'>
 			<a href='https://github.com/lucywyman'><img class='social' src='theme/images/github-icon.png'></a>
