Add loves and healthy blog posts

--- a/archives.html
+++ b/archives.html
@@ -35,6 +35,10 @@ ga('send', 'pageview');
 <h1>Archives for blog</h1>
 
 <dl>
+    <dt>03.6.2016</dt>
+    <dd><a href="/happy-and-healthy.html">Healthy + Happy: Inspired by My Mom</a></dd>
+    <dt>03.5.2016</dt>
+    <dd><a href="/loves.html">Loves</a></dd>
     <dt>03.1.2016</dt>
     <dd><a href="/hunger-makes-me-a-modern-girl.html">Book Review: Hunger Makes Me A Modern Girl</a></dd>
     <dt>02.26.2016</dt>
