--- a/archives.html
+++ b/archives.html
@@ -28,31 +28,54 @@ ga('send', 'pageview');
 </script>
 </head>	<body>
 		<nav>
-			<h3><a href='/'>Lucy Wyman</a></h3>
-			<a href='/about.html'>About</a>
+			<ul>
+				<li><h3><a href='http://blog.lucywyman.me'>Lucy Wyman</a></h3></li>
+				<li><a href='http://blog.lucywyman.me/about.html'>About</a></li>
+				<li><a href='http://blog.lucywyman.me/categories.html'>Categories &#129171;</a>
+				<ul>
+					<li><a href='http://blog.lucywyman.me/(<Category-u'Book-Review'>,-[<pelican.contents.Article-object-at-0x7f1c9f957650>,-<pelican.contents.Article-object-at-0x7f1c9f8b6e10>]).html'>
+							(<Category u'Book Review'>, [<pelican.contents.Article object at 0x7f1c9f957650>, <pelican.contents.Article object at 0x7f1c9f8b6e10>])
+						</a>
+					</li>
+					<li><a href='http://blog.lucywyman.me/(<Category-u'Experiences'>,-[<pelican.contents.Article-object-at-0x7f1c9fa6c1d0>,-<pelican.contents.Article-object-at-0x7f1c9f976f90>]).html'>
+							(<Category u'Experiences'>, [<pelican.contents.Article object at 0x7f1c9fa6c1d0>, <pelican.contents.Article object at 0x7f1c9f976f90>])
+						</a>
+					</li>
+					<li><a href='http://blog.lucywyman.me/(<Category-u'Loves'>,-[<pelican.contents.Article-object-at-0x7f1c9f976850>,-<pelican.contents.Article-object-at-0x7f1c9f8b6890>]).html'>
+							(<Category u'Loves'>, [<pelican.contents.Article object at 0x7f1c9f976850>, <pelican.contents.Article object at 0x7f1c9f8b6890>])
+						</a>
+					</li>
+				</ul>
+			</ul>
 		</nav>
 		<main>
 <h1>Archives for blog</h1>
 
 <dl>
+    <dt>03.14.2016</dt>
+    <dd><a href="http://blog.lucywyman.me/tattoo.html">Getting a Tattoo</a></dd>
     <dt>03.6.2016</dt>
-    <dd><a href="/happy-and-healthy.html">Healthy + Happy: Inspired by My Mom</a></dd>
+    <dd><a href="http://blog.lucywyman.me/happy-and-healthy.html">Healthy + Happy: Inspired by My Mom</a></dd>
     <dt>03.5.2016</dt>
-    <dd><a href="/loves.html">Loves</a></dd>
+    <dd><a href="http://blog.lucywyman.me/loves.html">Loves</a></dd>
     <dt>03.1.2016</dt>
-    <dd><a href="/hunger-makes-me-a-modern-girl.html">Book Review: Hunger Makes Me A Modern Girl</a></dd>
-    <dt>02.26.2016</dt>
-    <dd><a href="/self-driving-cars.html">Why I'm Not Afraid of Self-Driving Cars</a></dd>
+    <dd><a href="http://blog.lucywyman.me/hunger-makes-me-a-modern-girl.html">Book Review: Hunger Makes Me A Modern Girl</a></dd>
     <dt>02.23.2016</dt>
-    <dd><a href="/ready-player-one.html">Book Review: Ready Player One</a></dd>
+    <dd><a href="http://blog.lucywyman.me/ready-player-one.html">Book Review: Ready Player One</a></dd>
     <dt>01.23.2016</dt>
-    <dd><a href="/scale-14x.html">SCaLE 14x: My Experience</a></dd>
+    <dd><a href="http://blog.lucywyman.me/scale-14x.html">SCaLE 14x: My Experience</a></dd>
 </dl>
 		</main>
 		<div class='footer'>
-			<a href='https://github.com/lucywyman'><img class='social' src='theme/images/github-icon.png'></a>
-			<a href='http://linkedin.com/pub/lucy-wyman/70/553/6a7/'><img class='social' src='theme/images/linkedin.png'></a>
-			<a href='https://plus.google.com/107251431728646146032/posts'><img class='social' src='theme/images/google-plus.png'></a>
+			<a href='https://github.com/lucywyman'>
+				<img class='social' src='theme/images/github-icon.png'>
+			</a>
+			<a href='http://linkedin.com/pub/lucy-wyman/70/553/6a7/'>
+				<img class='social' src='theme/images/linkedin.png'>
+			</a>
+			<a href='https://plus.google.com/107251431728646146032/posts'>
+				<img class='social' src='theme/images/google-plus.png'>
+			</a>
 		</div>
 	</body>
 </html>
