--- a/loves.html
+++ b/loves.html
@@ -28,8 +28,25 @@ ga('send', 'pageview');
 </script>
 </head>	<body>
 		<nav>
-			<h3><a href='/'>Lucy Wyman</a></h3>
-			<a href='/about.html'>About</a>
+			<ul>
+				<li><h3><a href='http://blog.lucywyman.me'>Lucy Wyman</a></h3></li>
+				<li><a href='http://blog.lucywyman.me/about.html'>About</a></li>
+				<li><a href='http://blog.lucywyman.me/categories.html'>Categories &#129171;</a>
+				<ul>
+					<li><a href='http://blog.lucywyman.me/(<Category-u'Book-Review'>,-[<pelican.contents.Article-object-at-0x7f1c9f957650>,-<pelican.contents.Article-object-at-0x7f1c9f8b6e10>]).html'>
+							(<Category u'Book Review'>, [<pelican.contents.Article object at 0x7f1c9f957650>, <pelican.contents.Article object at 0x7f1c9f8b6e10>])
+						</a>
+					</li>
+					<li><a href='http://blog.lucywyman.me/(<Category-u'Experiences'>,-[<pelican.contents.Article-object-at-0x7f1c9fa6c1d0>,-<pelican.contents.Article-object-at-0x7f1c9f976f90>]).html'>
+							(<Category u'Experiences'>, [<pelican.contents.Article object at 0x7f1c9fa6c1d0>, <pelican.contents.Article object at 0x7f1c9f976f90>])
+						</a>
+					</li>
+					<li><a href='http://blog.lucywyman.me/(<Category-u'Loves'>,-[<pelican.contents.Article-object-at-0x7f1c9f976850>,-<pelican.contents.Article-object-at-0x7f1c9f8b6890>]).html'>
+							(<Category u'Loves'>, [<pelican.contents.Article object at 0x7f1c9f976850>, <pelican.contents.Article object at 0x7f1c9f8b6890>])
+						</a>
+					</li>
+				</ul>
+			</ul>
 		</nav>
 		<main>
 <h2>Loves</h2>
@@ -53,9 +70,15 @@ times I listen to this album, it always comforts and centers me.</li>
 
 		</main>
 		<div class='footer'>
-			<a href='https://github.com/lucywyman'><img class='social' src='theme/images/github-icon.png'></a>
-			<a href='http://linkedin.com/pub/lucy-wyman/70/553/6a7/'><img class='social' src='theme/images/linkedin.png'></a>
-			<a href='https://plus.google.com/107251431728646146032/posts'><img class='social' src='theme/images/google-plus.png'></a>
+			<a href='https://github.com/lucywyman'>
+				<img class='social' src='theme/images/github-icon.png'>
+			</a>
+			<a href='http://linkedin.com/pub/lucy-wyman/70/553/6a7/'>
+				<img class='social' src='theme/images/linkedin.png'>
+			</a>
+			<a href='https://plus.google.com/107251431728646146032/posts'>
+				<img class='social' src='theme/images/google-plus.png'>
+			</a>
 		</div>
 	</body>
 </html>
