Add interview content

--- a/archives.html
+++ b/archives.html
@@ -14,8 +14,8 @@
 <meta property="og:url" content="http://blog.lucywyman.me" />
 <meta property="og:site_name" content="Blog" />
 
-<script src="theme/js/jquery-1.11.2.js"></script>
-<link rel='stylesheet' href='theme/css/main.css' type='text/css'>
+<script src="/theme/js/jquery-1.11.2.js"></script>
+<link rel='stylesheet' href='/theme/css/main.css' type='text/css'>
 <script>
 (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 	(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -33,16 +33,16 @@ ga('send', 'pageview');
 				<li><a href='http://blog.lucywyman.me/about.html'>About</a></li>
 				<li><a href='http://blog.lucywyman.me/categories.html'>Categories &#129171;</a>
 				<ul>
-					<li><a href='http://blog.lucywyman.me/(<Category-u'Book-Review'>,-[<pelican.contents.Article-object-at-0x7f1c9f957650>,-<pelican.contents.Article-object-at-0x7f1c9f8b6e10>]).html'>
-							(<Category u'Book Review'>, [<pelican.contents.Article object at 0x7f1c9f957650>, <pelican.contents.Article object at 0x7f1c9f8b6e10>])
+					<li><a href='http://blog.lucywyman.me/(<Category-u'Book-Review'>,-[<pelican.contents.Article-object-at-0x7fe1cfe32650>,-<pelican.contents.Article-object-at-0x7fe1cfcd2dd0>]).html'>
+							(<Category u'Book Review'>, [<pelican.contents.Article object at 0x7fe1cfe32650>, <pelican.contents.Article object at 0x7fe1cfcd2dd0>])
 						</a>
 					</li>
-					<li><a href='http://blog.lucywyman.me/(<Category-u'Experiences'>,-[<pelican.contents.Article-object-at-0x7f1c9fa6c1d0>,-<pelican.contents.Article-object-at-0x7f1c9f976f90>]).html'>
-							(<Category u'Experiences'>, [<pelican.contents.Article object at 0x7f1c9fa6c1d0>, <pelican.contents.Article object at 0x7f1c9f976f90>])
+					<li><a href='http://blog.lucywyman.me/(<Category-u'Experiences'>,-[<pelican.contents.Article-object-at-0x7fe1cfe32a90>,-<pelican.contents.Article-object-at-0x7fe1cff461d0>,-<pelican.contents.Article-object-at-0x7fe1cfe52f90>]).html'>
+							(<Category u'Experiences'>, [<pelican.contents.Article object at 0x7fe1cfe32a90>, <pelican.contents.Article object at 0x7fe1cff461d0>, <pelican.contents.Article object at 0x7fe1cfe52f90>])
 						</a>
 					</li>
-					<li><a href='http://blog.lucywyman.me/(<Category-u'Loves'>,-[<pelican.contents.Article-object-at-0x7f1c9f976850>,-<pelican.contents.Article-object-at-0x7f1c9f8b6890>]).html'>
-							(<Category u'Loves'>, [<pelican.contents.Article object at 0x7f1c9f976850>, <pelican.contents.Article object at 0x7f1c9f8b6890>])
+					<li><a href='http://blog.lucywyman.me/(<Category-u'loves'>,-[<pelican.contents.Article-object-at-0x7fe1cfd8f890>,-<pelican.contents.Article-object-at-0x7fe1cfe52850>,-<pelican.contents.Article-object-at-0x7fe1cfd15cd0>]).html'>
+							(<Category u'loves'>, [<pelican.contents.Article object at 0x7fe1cfd8f890>, <pelican.contents.Article object at 0x7fe1cfe52850>, <pelican.contents.Article object at 0x7fe1cfd15cd0>])
 						</a>
 					</li>
 				</ul>
@@ -52,6 +52,10 @@ ga('send', 'pageview');
 <h1>Archives for blog</h1>
 
 <dl>
+    <dt>03.20.2016</dt>
+    <dd><a href="http://blog.lucywyman.me/interviews.html">The Interview</a></dd>
+    <dt>03.19.2016</dt>
+    <dd><a href="http://blog.lucywyman.me/apps-to-love.html">Apps I Love</a></dd>
     <dt>03.14.2016</dt>
     <dd><a href="http://blog.lucywyman.me/tattoo.html">Getting a Tattoo</a></dd>
     <dt>03.6.2016</dt>
