--- a/tattoo.html
+++ b/tattoo.html
@@ -14,8 +14,8 @@
 <meta property="og:url" content="http://blog.lucywyman.me" />
 <meta property="og:site_name" content="Blog" />
 
-<script src="theme/js/jquery-1.11.2.js"></script>
-<link rel='stylesheet' href='theme/css/main.css' type='text/css'>
+<script src="/theme/js/jquery-1.11.2.js"></script>
+<link rel='stylesheet' href='/theme/css/main.css' type='text/css'>
 <script>
 (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 	(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -33,16 +33,16 @@ ga('send', 'pageview');
 				<li><a href='http://blog.lucywyman.me/about.html'>About</a></li>
 				<li><a href='http://blog.lucywyman.me/categories.html'>Categories &#129171;</a>
 				<ul>
-					<li><a href='http://blog.lucywyman.me/(<Category-u'Book-Review'>,-[<pelican.contents.Article-object-at-0x7f349fc1c650>,-<pelican.contents.Article-object-at-0x7f349fb79e10>]).html'>
-							(<Category u'Book Review'>, [<pelican.contents.Article object at 0x7f349fc1c650>, <pelican.contents.Article object at 0x7f349fb79e10>])
+					<li><a href='http://blog.lucywyman.me/(<Category-u'Book-Review'>,-[<pelican.contents.Article-object-at-0x7fe1cfe32650>,-<pelican.contents.Article-object-at-0x7fe1cfcd2dd0>]).html'>
+							(<Category u'Book Review'>, [<pelican.contents.Article object at 0x7fe1cfe32650>, <pelican.contents.Article object at 0x7fe1cfcd2dd0>])
 						</a>
 					</li>
-					<li><a href='http://blog.lucywyman.me/(<Category-u'Experiences'>,-[<pelican.contents.Article-object-at-0x7f349fd301d0>,-<pelican.contents.Article-object-at-0x7f349fc3cf90>]).html'>
-							(<Category u'Experiences'>, [<pelican.contents.Article object at 0x7f349fd301d0>, <pelican.contents.Article object at 0x7f349fc3cf90>])
+					<li><a href='http://blog.lucywyman.me/(<Category-u'Experiences'>,-[<pelican.contents.Article-object-at-0x7fe1cfe32a90>,-<pelican.contents.Article-object-at-0x7fe1cff461d0>,-<pelican.contents.Article-object-at-0x7fe1cfe52f90>]).html'>
+							(<Category u'Experiences'>, [<pelican.contents.Article object at 0x7fe1cfe32a90>, <pelican.contents.Article object at 0x7fe1cff461d0>, <pelican.contents.Article object at 0x7fe1cfe52f90>])
 						</a>
 					</li>
-					<li><a href='http://blog.lucywyman.me/(<Category-u'Loves'>,-[<pelican.contents.Article-object-at-0x7f349fc3c850>,-<pelican.contents.Article-object-at-0x7f349fb79890>]).html'>
-							(<Category u'Loves'>, [<pelican.contents.Article object at 0x7f349fc3c850>, <pelican.contents.Article object at 0x7f349fb79890>])
+					<li><a href='http://blog.lucywyman.me/(<Category-u'loves'>,-[<pelican.contents.Article-object-at-0x7fe1cfd8f890>,-<pelican.contents.Article-object-at-0x7fe1cfe52850>,-<pelican.contents.Article-object-at-0x7fe1cfd15cd0>]).html'>
+							(<Category u'loves'>, [<pelican.contents.Article object at 0x7fe1cfd8f890>, <pelican.contents.Article object at 0x7fe1cfe52850>, <pelican.contents.Article object at 0x7fe1cfd15cd0>])
 						</a>
 					</li>
 				</ul>
