Add spongebob gif

--- a/interviews.html
+++ b/interviews.html
@@ -33,16 +33,16 @@ ga('send', 'pageview');
 				<li><a href='http://blog.lucywyman.me/about.html'>About</a></li>
 				<li><a href='http://blog.lucywyman.me/categories.html'>Categories &#129171;</a>
 				<ul>
-					<li><a href='http://blog.lucywyman.me/(<Category-u'Book-Review'>,-[<pelican.contents.Article-object-at-0x7fe1cfe32650>,-<pelican.contents.Article-object-at-0x7fe1cfcd2dd0>]).html'>
-							(<Category u'Book Review'>, [<pelican.contents.Article object at 0x7fe1cfe32650>, <pelican.contents.Article object at 0x7fe1cfcd2dd0>])
+					<li><a href='http://blog.lucywyman.me/(<Category-u'Book-Review'>,-[<pelican.contents.Article-object-at-0x7f618e1b9650>,-<pelican.contents.Article-object-at-0x7f618e05add0>]).html'>
+							(<Category u'Book Review'>, [<pelican.contents.Article object at 0x7f618e1b9650>, <pelican.contents.Article object at 0x7f618e05add0>])
 						</a>
 					</li>
-					<li><a href='http://blog.lucywyman.me/(<Category-u'Experiences'>,-[<pelican.contents.Article-object-at-0x7fe1cfe32a90>,-<pelican.contents.Article-object-at-0x7fe1cff461d0>,-<pelican.contents.Article-object-at-0x7fe1cfe52f90>]).html'>
-							(<Category u'Experiences'>, [<pelican.contents.Article object at 0x7fe1cfe32a90>, <pelican.contents.Article object at 0x7fe1cff461d0>, <pelican.contents.Article object at 0x7fe1cfe52f90>])
+					<li><a href='http://blog.lucywyman.me/(<Category-u'Experiences'>,-[<pelican.contents.Article-object-at-0x7f618e1b9a90>,-<pelican.contents.Article-object-at-0x7f618e2cd1d0>,-<pelican.contents.Article-object-at-0x7f618e1d9f90>]).html'>
+							(<Category u'Experiences'>, [<pelican.contents.Article object at 0x7f618e1b9a90>, <pelican.contents.Article object at 0x7f618e2cd1d0>, <pelican.contents.Article object at 0x7f618e1d9f90>])
 						</a>
 					</li>
-					<li><a href='http://blog.lucywyman.me/(<Category-u'loves'>,-[<pelican.contents.Article-object-at-0x7fe1cfd8f890>,-<pelican.contents.Article-object-at-0x7fe1cfe52850>,-<pelican.contents.Article-object-at-0x7fe1cfd15cd0>]).html'>
-							(<Category u'loves'>, [<pelican.contents.Article object at 0x7fe1cfd8f890>, <pelican.contents.Article object at 0x7fe1cfe52850>, <pelican.contents.Article object at 0x7fe1cfd15cd0>])
+					<li><a href='http://blog.lucywyman.me/(<Category-u'loves'>,-[<pelican.contents.Article-object-at-0x7f618e116890>,-<pelican.contents.Article-object-at-0x7f618e1d9850>,-<pelican.contents.Article-object-at-0x7f618e09dcd0>]).html'>
+							(<Category u'loves'>, [<pelican.contents.Article object at 0x7f618e116890>, <pelican.contents.Article object at 0x7f618e1d9850>, <pelican.contents.Article object at 0x7f618e09dcd0>])
 						</a>
 					</li>
 				</ul>
@@ -57,7 +57,7 @@ kind of nervous at first. &quot;Will they like me?&quot;, &quot;Am I smiling too
 between my teeth, oh my god, OH MY GOD, CODE BLUE CODE BLUE FOOD IN TEETH
 FOOD IN TEETH WHAT DO WE DO&quot;.</p>
 <div class="figure align-center">
-<img alt="" src="/images/spongebob.gif" />
+<img alt="" src="/theme/images/spongebob.gif" />
 </div>
 <p>Needless to say, it's difficult to stand in judgement of other humans,
 particularly with your career on the line!
@@ -318,7 +318,7 @@ time exploring sites like the Android Garden, little google shops, and generally
 wandering around. It's like it's own small, clean city with beautiful landscapes,
 an amphitheater, movies, shops, and so on.</p>
 <div class="figure align-center">
-<img alt="" src="theme/images/android-garden.jpg" style="width: 400px;" />
+<img alt="" src="/theme/images/android-garden.jpg" style="width: 400px;" />
 </div>
 <p>Once I was in the right place, the interviewing
 began right away.  As I said, I won't discuss the details of questions asked, but
@@ -336,7 +336,7 @@ real hobbies outside of work.  I know this is something they are working on, and
 can't confirm that this is culturally true, it was just the vibe I got during
 my very short time there.</p>
 <div class="figure align-center">
-<img alt="" src="theme/images/expectant-mother.jpg" style="height: 400px;" />
+<img alt="" src="/theme/images/expectant-mother.jpg" style="height: 400px;" />
 </div>
 <p>This onsite consisted of 4 hour-long interviews with a lunch break, each
 interview being one-on-one, which I found much more manageable than two-on-one.
