--- a/tattoo.html
+++ b/tattoo.html
@@ -33,16 +33,16 @@ ga('send', 'pageview');
 				<li><a href='http://blog.lucywyman.me/about.html'>About</a></li>
 				<li><a href='http://blog.lucywyman.me/categories.html'>Categories &#129171;</a>
 				<ul>
-					<li><a href='http://blog.lucywyman.me/(<Category-u'Book-Review'>,-[<pelican.contents.Article-object-at-0x7fe1cfe32650>,-<pelican.contents.Article-object-at-0x7fe1cfcd2dd0>]).html'>
-							(<Category u'Book Review'>, [<pelican.contents.Article object at 0x7fe1cfe32650>, <pelican.contents.Article object at 0x7fe1cfcd2dd0>])
+					<li><a href='http://blog.lucywyman.me/(<Category-u'Book-Review'>,-[<pelican.contents.Article-object-at-0x7f618e1b9650>,-<pelican.contents.Article-object-at-0x7f618e05add0>]).html'>
+							(<Category u'Book Review'>, [<pelican.contents.Article object at 0x7f618e1b9650>, <pelican.contents.Article object at 0x7f618e05add0>])
 						</a>
 					</li>
-					<li><a href='http://blog.lucywyman.me/(<Category-u'Experiences'>,-[<pelican.contents.Article-object-at-0x7fe1cfe32a90>,-<pelican.contents.Article-object-at-0x7fe1cff461d0>,-<pelican.contents.Article-object-at-0x7fe1cfe52f90>]).html'>
-							(<Category u'Experiences'>, [<pelican.contents.Article object at 0x7fe1cfe32a90>, <pelican.contents.Article object at 0x7fe1cff461d0>, <pelican.contents.Article object at 0x7fe1cfe52f90>])
+					<li><a href='http://blog.lucywyman.me/(<Category-u'Experiences'>,-[<pelican.contents.Article-object-at-0x7f618e1b9a90>,-<pelican.contents.Article-object-at-0x7f618e2cd1d0>,-<pelican.contents.Article-object-at-0x7f618e1d9f90>]).html'>
+							(<Category u'Experiences'>, [<pelican.contents.Article object at 0x7f618e1b9a90>, <pelican.contents.Article object at 0x7f618e2cd1d0>, <pelican.contents.Article object at 0x7f618e1d9f90>])
 						</a>
 					</li>
-					<li><a href='http://blog.lucywyman.me/(<Category-u'loves'>,-[<pelican.contents.Article-object-at-0x7fe1cfd8f890>,-<pelican.contents.Article-object-at-0x7fe1cfe52850>,-<pelican.contents.Article-object-at-0x7fe1cfd15cd0>]).html'>
-							(<Category u'loves'>, [<pelican.contents.Article object at 0x7fe1cfd8f890>, <pelican.contents.Article object at 0x7fe1cfe52850>, <pelican.contents.Article object at 0x7fe1cfd15cd0>])
+					<li><a href='http://blog.lucywyman.me/(<Category-u'loves'>,-[<pelican.contents.Article-object-at-0x7f618e116890>,-<pelican.contents.Article-object-at-0x7f618e1d9850>,-<pelican.contents.Article-object-at-0x7f618e09dcd0>]).html'>
+							(<Category u'loves'>, [<pelican.contents.Article object at 0x7f618e116890>, <pelican.contents.Article object at 0x7f618e1d9850>, <pelican.contents.Article object at 0x7f618e09dcd0>])
 						</a>
 					</li>
 				</ul>
@@ -96,18 +96,18 @@ more likely to &quot;tire out&quot; so to speak.  Besides, if I really liked a q
 had plenty of skin to get other tattoos in the future.</p>
 <p>Researching designs brought up a few contenders:</p>
 <div class="figure align-left">
-<img alt="" src="theme/images/equal-tattoo.jpg" style="width: 30%;" />
+<img alt="" src="/theme/images/equal-tattoo.jpg" style="width: 30%;" />
 </div>
 <div class="figure align-right">
-<img alt="" src="theme/images/sun-watercolor.jpg" style="width: 30%;" />
+<img alt="" src="/theme/images/sun-watercolor.jpg" style="width: 30%;" />
 </div>
 <div class="figure align-center">
-<img alt="" src="theme/images/rose-tattoo.jpg" style="width: 30%;" />
+<img alt="" src="/theme/images/rose-tattoo.jpg" style="width: 30%;" />
 </div>
 <p>After consulting friends and learning more about what kinds of tattoos are
 difficult to execute, and which aren't, I settled on this:</p>
 <div class="figure align-center">
-<img alt="" src="theme/images/my-tattoo.jpg" />
+<img alt="" src="/theme/images/my-tattoo.jpg" />
 </div>
 <p>Without the portland, in plain black ink.</p>
 <p>My advice:</p>
@@ -155,7 +155,7 @@ is with their first tattoo, I was nervous that I would regret getting something
 put permanently on my body, but I knew when I saw it that I had made the right
 decision. Crisis: avoided.</p>
 <div class="figure align-center">
-<img alt="" src="theme/images/my-tat-picture.jpeg" style="width: 40%;" />
+<img alt="" src="/theme/images/my-tat-picture.jpeg" style="width: 40%;" />
 </div>
 </div>
 <div class="section" id="post-tattoo">
