Add if I were a boy post

--- a/authors.html
+++ b/authors.html
@@ -33,16 +33,16 @@ ga('send', 'pageview');
 				<li><a href='http://blog.lucywyman.me/about.html'>About</a></li>
 				<li><a href='http://blog.lucywyman.me/categories.html'>Categories &#8964;</a>
 				<ul>
-					<li><a href='http://blog.lucywyman.me/(<Category-u'Book-Review'>,-[<pelican.contents.Article-object-at-0x7f7d6fbd9650>,-<pelican.contents.Article-object-at-0x7f7d6fa7add0>]).html'>
-							(<Category u'Book Review'>, [<pelican.contents.Article object at 0x7f7d6fbd9650>, <pelican.contents.Article object at 0x7f7d6fa7add0>])
+					<li><a href='http://blog.lucywyman.me/(<Category-u'Book-Review'>,-[<pelican.contents.Article-object-at-0x7f6a00dd1650>,-<pelican.contents.Article-object-at-0x7f6a00c72b50>]).html'>
+							(<Category u'Book Review'>, [<pelican.contents.Article object at 0x7f6a00dd1650>, <pelican.contents.Article object at 0x7f6a00c72b50>])
 						</a>
 					</li>
-					<li><a href='http://blog.lucywyman.me/(<Category-u'Experiences'>,-[<pelican.contents.Article-object-at-0x7f7d6fbd9a90>,-<pelican.contents.Article-object-at-0x7f7d6fced1d0>,-<pelican.contents.Article-object-at-0x7f7d6fbf9f90>]).html'>
-							(<Category u'Experiences'>, [<pelican.contents.Article object at 0x7f7d6fbd9a90>, <pelican.contents.Article object at 0x7f7d6fced1d0>, <pelican.contents.Article object at 0x7f7d6fbf9f90>])
+					<li><a href='http://blog.lucywyman.me/(<Category-u'Experiences'>,-[<pelican.contents.Article-object-at-0x7f6a00cdac10>,-<pelican.contents.Article-object-at-0x7f6a00dd1a90>,-<pelican.contents.Article-object-at-0x7f6a00ee51d0>,-<pelican.contents.Article-object-at-0x7f6a00df1f90>]).html'>
+							(<Category u'Experiences'>, [<pelican.contents.Article object at 0x7f6a00cdac10>, <pelican.contents.Article object at 0x7f6a00dd1a90>, <pelican.contents.Article object at 0x7f6a00ee51d0>, <pelican.contents.Article object at 0x7f6a00df1f90>])
 						</a>
 					</li>
-					<li><a href='http://blog.lucywyman.me/(<Category-u'loves'>,-[<pelican.contents.Article-object-at-0x7f7d6fb36890>,-<pelican.contents.Article-object-at-0x7f7d6fbf9850>,-<pelican.contents.Article-object-at-0x7f7d6fabdcd0>]).html'>
-							(<Category u'loves'>, [<pelican.contents.Article object at 0x7f7d6fb36890>, <pelican.contents.Article object at 0x7f7d6fbf9850>, <pelican.contents.Article object at 0x7f7d6fabdcd0>])
+					<li><a href='http://blog.lucywyman.me/(<Category-u'loves'>,-[<pelican.contents.Article-object-at-0x7f6a00d2e890>,-<pelican.contents.Article-object-at-0x7f6a00df1850>,-<pelican.contents.Article-object-at-0x7f6a00cb5cd0>]).html'>
+							(<Category u'loves'>, [<pelican.contents.Article object at 0x7f6a00d2e890>, <pelican.contents.Article object at 0x7f6a00df1850>, <pelican.contents.Article object at 0x7f6a00cb5cd0>])
 						</a>
 					</li>
 				</ul>
@@ -51,7 +51,7 @@ ga('send', 'pageview');
 		<main>
     <h1>Authors on blog</h1>
 
-    <ul>        <li><a href="http://blog.lucywyman.me/author/lucy-wyman.html">Lucy Wyman</a> (8)</li>
+    <ul>        <li><a href="http://blog.lucywyman.me/author/lucy-wyman.html">Lucy Wyman</a> (9)</li>
     </ul>
 		</main>
 		<div class='footer'>
