--- a/archives.html
+++ b/archives.html
@@ -33,16 +33,20 @@ ga('send', 'pageview');
 				<li><a href='http://blog.lucywyman.me/about.html'>About</a></li>
 				<li><a href='http://blog.lucywyman.me/categories.html'>Categories &#8964;</a>
 				<ul>
-					<li><a href='http://blog.lucywyman.me/(<Category-u'Book-Review'>,-[<pelican.contents.Article-object-at-0x7f6a00dd1650>,-<pelican.contents.Article-object-at-0x7f6a00c72b50>]).html'>
-							(<Category u'Book Review'>, [<pelican.contents.Article object at 0x7f6a00dd1650>, <pelican.contents.Article object at 0x7f6a00c72b50>])
+					<li><a href='http://blog.lucywyman.me/(<Category-u'Book-Review'>,-[<pelican.contents.Article-object-at-0x7f9120f22b10>,-<pelican.contents.Article-object-at-0x7f91209d9690>,-<pelican.contents.Article-object-at-0x7f91209d9290>,-<pelican.contents.Article-object-at-0x7f91208121d0>]).html'>
+							(<Category u'Book Review'>, [<pelican.contents.Article object at 0x7f9120f22b10>, <pelican.contents.Article object at 0x7f91209d9690>, <pelican.contents.Article object at 0x7f91209d9290>, <pelican.contents.Article object at 0x7f91208121d0>])
 						</a>
 					</li>
-					<li><a href='http://blog.lucywyman.me/(<Category-u'Experiences'>,-[<pelican.contents.Article-object-at-0x7f6a00cdac10>,-<pelican.contents.Article-object-at-0x7f6a00dd1a90>,-<pelican.contents.Article-object-at-0x7f6a00ee51d0>,-<pelican.contents.Article-object-at-0x7f6a00df1f90>]).html'>
-							(<Category u'Experiences'>, [<pelican.contents.Article object at 0x7f6a00cdac10>, <pelican.contents.Article object at 0x7f6a00dd1a90>, <pelican.contents.Article object at 0x7f6a00ee51d0>, <pelican.contents.Article object at 0x7f6a00df1f90>])
+					<li><a href='http://blog.lucywyman.me/(<Category-u'Book-Reviews'>,-[<pelican.contents.Article-object-at-0x7f9120a27110>]).html'>
+							(<Category u'Book Reviews'>, [<pelican.contents.Article object at 0x7f9120a27110>])
 						</a>
 					</li>
-					<li><a href='http://blog.lucywyman.me/(<Category-u'loves'>,-[<pelican.contents.Article-object-at-0x7f6a00d2e890>,-<pelican.contents.Article-object-at-0x7f6a00df1850>,-<pelican.contents.Article-object-at-0x7f6a00cb5cd0>]).html'>
-							(<Category u'loves'>, [<pelican.contents.Article object at 0x7f6a00d2e890>, <pelican.contents.Article object at 0x7f6a00df1850>, <pelican.contents.Article object at 0x7f6a00cb5cd0>])
+					<li><a href='http://blog.lucywyman.me/(<Category-u'Experiences'>,-[<pelican.contents.Article-object-at-0x7f91209d9550>,-<pelican.contents.Article-object-at-0x7f9120899b50>,-<pelican.contents.Article-object-at-0x7f9120a27410>,-<pelican.contents.Article-object-at-0x7f9120b3b1d0>,-<pelican.contents.Article-object-at-0x7f9120a27d90>]).html'>
+							(<Category u'Experiences'>, [<pelican.contents.Article object at 0x7f91209d9550>, <pelican.contents.Article object at 0x7f9120899b50>, <pelican.contents.Article object at 0x7f9120a27410>, <pelican.contents.Article object at 0x7f9120b3b1d0>, <pelican.contents.Article object at 0x7f9120a27d90>])
+						</a>
+					</li>
+					<li><a href='http://blog.lucywyman.me/(<Category-u'Loves'>,-[<pelican.contents.Article-object-at-0x7f9120812290>,-<pelican.contents.Article-object-at-0x7f912091d290>,-<pelican.contents.Article-object-at-0x7f9120a47f90>,-<pelican.contents.Article-object-at-0x7f9120a27310>]).html'>
+							(<Category u'Loves'>, [<pelican.contents.Article object at 0x7f9120812290>, <pelican.contents.Article object at 0x7f912091d290>, <pelican.contents.Article object at 0x7f9120a47f90>, <pelican.contents.Article object at 0x7f9120a27310>])
 						</a>
 					</li>
 				</ul>
@@ -52,12 +56,22 @@ ga('send', 'pageview');
 <h1>Archives for blog</h1>
 
 <dl>
+    <dt>04.25.2016</dt>
+    <dd><a href="http://blog.lucywyman.me/how-body-pump-taught-me-to-make-mistakes.html">How Body Pump Taught Me To Make Mistakes</a></dd>
+    <dt>04.21.2016</dt>
+    <dd><a href="http://blog.lucywyman.me/podcasts.html">Podcasts I Love</a></dd>
+    <dt>04.17.2016</dt>
+    <dd><a href="http://blog.lucywyman.me/brooklyn.html">Book Review: Brooklyn</a></dd>
     <dt>04.11.2016</dt>
     <dd><a href="http://blog.lucywyman.me/boy.html">If I Were A Boy</a></dd>
+    <dt>04.3.2016</dt>
+    <dd><a href="http://blog.lucywyman.me/furiously-happy.html">Book Review: Furiously Happy</a></dd>
     <dt>03.20.2016</dt>
     <dd><a href="http://blog.lucywyman.me/interviews.html">The Interview</a></dd>
     <dt>03.19.2016</dt>
     <dd><a href="http://blog.lucywyman.me/apps-to-love.html">Apps I Love</a></dd>
+    <dt>03.19.2016</dt>
+    <dd><a href="http://blog.lucywyman.me/harry-potter-series.html">Book Review: Harry Potter Series</a></dd>
     <dt>03.14.2016</dt>
     <dd><a href="http://blog.lucywyman.me/tattoo.html">Getting a Tattoo</a></dd>
     <dt>03.6.2016</dt>
