--- a/brooklyn.html
+++ b/brooklyn.html
@@ -53,15 +53,42 @@ ga('send', 'pageview');
 			</ul>
 		</nav>
 		<main>
-<ul class='articles'>
-<li><h4><a href="http://blog.lucywyman.me/interviews.html">The Interview</a></h4>
-	<p>03.20.2016</p>
-	<p><p>Interviewing is a lot like dating.  You put on your nice clothes. You're
-kind of nervous at first. &quot;Will they like me?&quot;, &quot;Am I smiling too much?&quot;,
-&quot;Was I supposed to tell the story about the frog?&quot;, &quot;Oh god, I feel something
-between my teeth, oh my god, OH ...</p><a href='interviews.html'>Read more...</a></p></li>
-<p class="paginator">
-</p>
+<h2>Book Review: Brooklyn</h2>
+<p>04.17.2016</p>
+<p>All I knew when I picked this book up was that
+it was made into a movie, and had something to do with a
+young woman, the early 20th century, and probably
+Brooklyn, NY.  Honestly, even that was too much:
+I spent much of my time reading it trying to figure out
+why someone would choose to turn <em>this</em> book into a film
+and came away disappointed.  It was blasé, and while I
+don't want to diminish the experience of immigrants
+to NY in the early 1900s there was nothing unique,
+clever, eye-opening, or otherwise remarkable about the novel.
+I liked the main character well enough, but found that
+in the end I didn't care what happened to her or any of
+the other characters. The main character Eilis and her
+sister Rose feel very much like female characters written by
+a man. You can very clearly see the lens through which
+he views them, the brush strokes he uses to create them,
+and that makes them seem very unreal.  They feel more
+like what you would get if you asked your well-meaning
+grandfather to describe his first love interest than
+real women, and without the connection to the characters
+I found myself struggling to hold on to anything in the
+novel.  I appreciate that Tóibín wrote a novel that centered
+on strong female characters, and that such a novel
+could be turned into an award-winning film. But before
+we congratulate ourselves on appreciating a novel about
+a woman who travels alone to America, goes to college
+and works, and chats with her sister and female roommates,
+let's consider that Eilis probably experienced a lot of
+fear, racism, sexism, uncertainty, and hardship that
+is generally glossed over. Overall I was underwhelmed,
+and wouldn't recommend it if you've got other books
+on your list to read.</p>
+
+
 		</main>
 		<div class='footer'>
 			<a href='https://github.com/lucywyman'>
