--- a/archives.html
+++ b/archives.html
@@ -33,20 +33,16 @@ ga('send', 'pageview');
 				<li><a href='http://blog.lucywyman.me/about.html'>About</a></li>
 				<li><a href='http://blog.lucywyman.me/categories.html'>Categories &#8964;</a>
 				<ul>
-					<li><a href='http://blog.lucywyman.me/(<Category-u'Book-Review'>,-[<pelican.contents.Article-object-at-0x7f9120f22b10>,-<pelican.contents.Article-object-at-0x7f91209d9690>,-<pelican.contents.Article-object-at-0x7f91209d9290>,-<pelican.contents.Article-object-at-0x7f91208121d0>]).html'>
-							(<Category u'Book Review'>, [<pelican.contents.Article object at 0x7f9120f22b10>, <pelican.contents.Article object at 0x7f91209d9690>, <pelican.contents.Article object at 0x7f91209d9290>, <pelican.contents.Article object at 0x7f91208121d0>])
+					<li><a href='http://blog.lucywyman.me/(<Category-u'Book-Review'>,-[<pelican.contents.Article-object-at-0x7fd49f2a2890>,-<pelican.contents.Article-object-at-0x7fd49f22e6d0>,-<pelican.contents.Article-object-at-0x7fd49f77db10>,-<pelican.contents.Article-object-at-0x7fd49f1eda10>,-<pelican.contents.Article-object-at-0x7fd49f2822d0>,-<pelican.contents.Article-object-at-0x7fd49f10bf50>]).html'>
+							(<Category u'Book Review'>, [<pelican.contents.Article object at 0x7fd49f2a2890>, <pelican.contents.Article object at 0x7fd49f22e6d0>, <pelican.contents.Article object at 0x7fd49f77db10>, <pelican.contents.Article object at 0x7fd49f1eda10>, <pelican.contents.Article object at 0x7fd49f2822d0>, <pelican.contents.Article object at 0x7fd49f10bf50>])
 						</a>
 					</li>
-					<li><a href='http://blog.lucywyman.me/(<Category-u'Book-Reviews'>,-[<pelican.contents.Article-object-at-0x7f9120a27110>]).html'>
-							(<Category u'Book Reviews'>, [<pelican.contents.Article object at 0x7f9120a27110>])
+					<li><a href='http://blog.lucywyman.me/(<Category-u'Experiences'>,-[<pelican.contents.Article-object-at-0x7fd49f0b5ad0>,-<pelican.contents.Article-object-at-0x7fd49f1ed590>,-<pelican.contents.Article-object-at-0x7fd49f0b5a90>,-<pelican.contents.Article-object-at-0x7fd49f282110>,-<pelican.contents.Article-object-at-0x7fd49f3961d0>,-<pelican.contents.Article-object-at-0x7fd49f235ed0>]).html'>
+							(<Category u'Experiences'>, [<pelican.contents.Article object at 0x7fd49f0b5ad0>, <pelican.contents.Article object at 0x7fd49f1ed590>, <pelican.contents.Article object at 0x7fd49f0b5a90>, <pelican.contents.Article object at 0x7fd49f282110>, <pelican.contents.Article object at 0x7fd49f3961d0>, <pelican.contents.Article object at 0x7fd49f235ed0>])
 						</a>
 					</li>
-					<li><a href='http://blog.lucywyman.me/(<Category-u'Experiences'>,-[<pelican.contents.Article-object-at-0x7f91209d9550>,-<pelican.contents.Article-object-at-0x7f9120899b50>,-<pelican.contents.Article-object-at-0x7f9120a27410>,-<pelican.contents.Article-object-at-0x7f9120b3b1d0>,-<pelican.contents.Article-object-at-0x7f9120a27d90>]).html'>
-							(<Category u'Experiences'>, [<pelican.contents.Article object at 0x7f91209d9550>, <pelican.contents.Article object at 0x7f9120899b50>, <pelican.contents.Article object at 0x7f9120a27410>, <pelican.contents.Article object at 0x7f9120b3b1d0>, <pelican.contents.Article object at 0x7f9120a27d90>])
-						</a>
-					</li>
-					<li><a href='http://blog.lucywyman.me/(<Category-u'Loves'>,-[<pelican.contents.Article-object-at-0x7f9120812290>,-<pelican.contents.Article-object-at-0x7f912091d290>,-<pelican.contents.Article-object-at-0x7f9120a47f90>,-<pelican.contents.Article-object-at-0x7f9120a27310>]).html'>
-							(<Category u'Loves'>, [<pelican.contents.Article object at 0x7f9120812290>, <pelican.contents.Article object at 0x7f912091d290>, <pelican.contents.Article object at 0x7f9120a47f90>, <pelican.contents.Article object at 0x7f9120a27310>])
+					<li><a href='http://blog.lucywyman.me/(<Category-u'Loves'>,-[<pelican.contents.Article-object-at-0x7fd49f02b6d0>,-<pelican.contents.Article-object-at-0x7fd49f1c53d0>,-<pelican.contents.Article-object-at-0x7fd49f235a50>,-<pelican.contents.Article-object-at-0x7fd49f0b55d0>]).html'>
+							(<Category u'Loves'>, [<pelican.contents.Article object at 0x7fd49f02b6d0>, <pelican.contents.Article object at 0x7fd49f1c53d0>, <pelican.contents.Article object at 0x7fd49f235a50>, <pelican.contents.Article object at 0x7fd49f0b55d0>])
 						</a>
 					</li>
 				</ul>
@@ -56,6 +52,10 @@ ga('send', 'pageview');
 <h1>Archives for blog</h1>
 
 <dl>
+    <dt>05.9.2016</dt>
+    <dd><a href="http://blog.lucywyman.me/me-earl-dying-girl.html">Book Review: Me and Earl and the Dying Girl</a></dd>
+    <dt>05.3.2016</dt>
+    <dd><a href="http://blog.lucywyman.me/ptown-may-2016.html">Portland Trip: May 2016</a></dd>
     <dt>04.25.2016</dt>
     <dd><a href="http://blog.lucywyman.me/how-body-pump-taught-me-to-make-mistakes.html">How Body Pump Taught Me To Make Mistakes</a></dd>
     <dt>04.21.2016</dt>
