--- a/scale-14x.html
+++ b/scale-14x.html
@@ -33,20 +33,16 @@ ga('send', 'pageview');
 				<li><a href='http://blog.lucywyman.me/about.html'>About</a></li>
 				<li><a href='http://blog.lucywyman.me/categories.html'>Categories &#8964;</a>
 				<ul>
-					<li><a href='http://blog.lucywyman.me/(<Category-u'Book-Review'>,-[<pelican.contents.Article-object-at-0x7f9120f22b10>,-<pelican.contents.Article-object-at-0x7f91209d9690>,-<pelican.contents.Article-object-at-0x7f91209d9290>,-<pelican.contents.Article-object-at-0x7f91208121d0>]).html'>
-							(<Category u'Book Review'>, [<pelican.contents.Article object at 0x7f9120f22b10>, <pelican.contents.Article object at 0x7f91209d9690>, <pelican.contents.Article object at 0x7f91209d9290>, <pelican.contents.Article object at 0x7f91208121d0>])
+					<li><a href='http://blog.lucywyman.me/(<Category-u'Book-Review'>,-[<pelican.contents.Article-object-at-0x7fd49f2a2890>,-<pelican.contents.Article-object-at-0x7fd49f22e6d0>,-<pelican.contents.Article-object-at-0x7fd49f77db10>,-<pelican.contents.Article-object-at-0x7fd49f1eda10>,-<pelican.contents.Article-object-at-0x7fd49f2822d0>,-<pelican.contents.Article-object-at-0x7fd49f10bf50>]).html'>
+							(<Category u'Book Review'>, [<pelican.contents.Article object at 0x7fd49f2a2890>, <pelican.contents.Article object at 0x7fd49f22e6d0>, <pelican.contents.Article object at 0x7fd49f77db10>, <pelican.contents.Article object at 0x7fd49f1eda10>, <pelican.contents.Article object at 0x7fd49f2822d0>, <pelican.contents.Article object at 0x7fd49f10bf50>])
 						</a>
 					</li>
-					<li><a href='http://blog.lucywyman.me/(<Category-u'Book-Reviews'>,-[<pelican.contents.Article-object-at-0x7f9120a27110>]).html'>
-							(<Category u'Book Reviews'>, [<pelican.contents.Article object at 0x7f9120a27110>])
+					<li><a href='http://blog.lucywyman.me/(<Category-u'Experiences'>,-[<pelican.contents.Article-object-at-0x7fd49f0b5ad0>,-<pelican.contents.Article-object-at-0x7fd49f1ed590>,-<pelican.contents.Article-object-at-0x7fd49f0b5a90>,-<pelican.contents.Article-object-at-0x7fd49f282110>,-<pelican.contents.Article-object-at-0x7fd49f3961d0>,-<pelican.contents.Article-object-at-0x7fd49f235ed0>]).html'>
+							(<Category u'Experiences'>, [<pelican.contents.Article object at 0x7fd49f0b5ad0>, <pelican.contents.Article object at 0x7fd49f1ed590>, <pelican.contents.Article object at 0x7fd49f0b5a90>, <pelican.contents.Article object at 0x7fd49f282110>, <pelican.contents.Article object at 0x7fd49f3961d0>, <pelican.contents.Article object at 0x7fd49f235ed0>])
 						</a>
 					</li>
-					<li><a href='http://blog.lucywyman.me/(<Category-u'Experiences'>,-[<pelican.contents.Article-object-at-0x7f91209d9550>,-<pelican.contents.Article-object-at-0x7f9120899b50>,-<pelican.contents.Article-object-at-0x7f9120a27410>,-<pelican.contents.Article-object-at-0x7f9120b3b1d0>,-<pelican.contents.Article-object-at-0x7f9120a27d90>]).html'>
-							(<Category u'Experiences'>, [<pelican.contents.Article object at 0x7f91209d9550>, <pelican.contents.Article object at 0x7f9120899b50>, <pelican.contents.Article object at 0x7f9120a27410>, <pelican.contents.Article object at 0x7f9120b3b1d0>, <pelican.contents.Article object at 0x7f9120a27d90>])
-						</a>
-					</li>
-					<li><a href='http://blog.lucywyman.me/(<Category-u'Loves'>,-[<pelican.contents.Article-object-at-0x7f9120812290>,-<pelican.contents.Article-object-at-0x7f912091d290>,-<pelican.contents.Article-object-at-0x7f9120a47f90>,-<pelican.contents.Article-object-at-0x7f9120a27310>]).html'>
-							(<Category u'Loves'>, [<pelican.contents.Article object at 0x7f9120812290>, <pelican.contents.Article object at 0x7f912091d290>, <pelican.contents.Article object at 0x7f9120a47f90>, <pelican.contents.Article object at 0x7f9120a27310>])
+					<li><a href='http://blog.lucywyman.me/(<Category-u'Loves'>,-[<pelican.contents.Article-object-at-0x7fd49f02b6d0>,-<pelican.contents.Article-object-at-0x7fd49f1c53d0>,-<pelican.contents.Article-object-at-0x7fd49f235a50>,-<pelican.contents.Article-object-at-0x7fd49f0b55d0>]).html'>
+							(<Category u'Loves'>, [<pelican.contents.Article object at 0x7fd49f02b6d0>, <pelican.contents.Article object at 0x7fd49f1c53d0>, <pelican.contents.Article object at 0x7fd49f235a50>, <pelican.contents.Article object at 0x7fd49f0b55d0>])
 						</a>
 					</li>
 				</ul>
@@ -55,6 +51,9 @@ ga('send', 'pageview');
 		<main>
 <h2>SCaLE 14x: My Experience</h2>
 <p>01.23.2016</p>
+<div class="figure align-center">
+<img alt="" src="/theme/images/scale-14x.png" />
+</div>
 <div class="section" id="day-0">
 <h2>Day 0:</h2>
 <p>We pulled up to the venue at about 5:30 Friday night, T-90 minutes to Ignite
