--- a/authors.html
+++ b/authors.html
@@ -33,24 +33,24 @@ ga('send', 'pageview');
 				<li><a href='http://blog.lucywyman.me/about.html'>About</a></li>
 				<li><a href='http://blog.lucywyman.me/categories.html'>Categories &#8964;</a>
 				<ul>
-					<li><a href='http://blog.lucywyman.me/(<Category-u'Book-Review'>,-[<pelican.contents.Article-object-at-0x7fb5b4aa0d50>,-<pelican.contents.Article-object-at-0x7fb5b4bad890>,-<pelican.contents.Article-object-at-0x7fb5b4a1a350>,-<pelican.contents.Article-object-at-0x7fb5b4ad5690>,-<pelican.contents.Article-object-at-0x7fb5b5087b10>,-<pelican.contents.Article-object-at-0x7fb5b4b8d050>,-<pelican.contents.Article-object-at-0x7fb5b4a1ab10>,-<pelican.contents.Article-object-at-0x7fb5b48eb110>]).html'>
-							(<Category u'Book Review'>, [<pelican.contents.Article object at 0x7fb5b4aa0d50>, <pelican.contents.Article object at 0x7fb5b4bad890>, <pelican.contents.Article object at 0x7fb5b4a1a350>, <pelican.contents.Article object at 0x7fb5b4ad5690>, <pelican.contents.Article object at 0x7fb5b5087b10>, <pelican.contents.Article object at 0x7fb5b4b8d050>, <pelican.contents.Article object at 0x7fb5b4a1ab10>, <pelican.contents.Article object at 0x7fb5b48eb110>])
+					<li><a href='http://blog.lucywyman.me/(<Category-u'Book-Review'>,-[<pelican.contents.Article-object-at-0x7f8324d151d0>,-<pelican.contents.Article-object-at-0x7f8324b34590>,-<pelican.contents.Article-object-at-0x7f8324c9c090>,-<pelican.contents.Article-object-at-0x7f8324a043d0>,-<pelican.contents.Article-object-at-0x7f8324ae9f50>,-<pelican.contents.Article-object-at-0x7f8324ceef50>,-<pelican.contents.Article-object-at-0x7f8324cab750>,-<pelican.contents.Article-object-at-0x7f8324c03350>,-<pelican.contents.Article-object-at-0x7f83249c3d50>]).html'>
+							(<Category u'Book Review'>, [<pelican.contents.Article object at 0x7f8324d151d0>, <pelican.contents.Article object at 0x7f8324b34590>, <pelican.contents.Article object at 0x7f8324c9c090>, <pelican.contents.Article object at 0x7f8324a043d0>, <pelican.contents.Article object at 0x7f8324ae9f50>, <pelican.contents.Article object at 0x7f8324ceef50>, <pelican.contents.Article object at 0x7f8324cab750>, <pelican.contents.Article object at 0x7f8324c03350>, <pelican.contents.Article object at 0x7f83249c3d50>])
 						</a>
 					</li>
-					<li><a href='http://blog.lucywyman.me/(<Category-u'Conferences'>,-[<pelican.contents.Article-object-at-0x7fb5b4b3acd0>]).html'>
-							(<Category u'Conferences'>, [<pelican.contents.Article object at 0x7fb5b4b3acd0>])
+					<li><a href='http://blog.lucywyman.me/(<Category-u'Conferences'>,-[<pelican.contents.Article-object-at-0x7f8324c14e50>]).html'>
+							(<Category u'Conferences'>, [<pelican.contents.Article object at 0x7f8324c14e50>])
 						</a>
 					</li>
-					<li><a href='http://blog.lucywyman.me/(<Category-u'Experiences'>,-[<pelican.contents.Article-object-at-0x7fb5b48eb850>,-<pelican.contents.Article-object-at-0x7fb5b48eb5d0>,-<pelican.contents.Article-object-at-0x7fb5b4aa0c90>,-<pelican.contents.Article-object-at-0x7fb5b4ca11d0>,-<pelican.contents.Article-object-at-0x7fb5b4afdb50>]).html'>
-							(<Category u'Experiences'>, [<pelican.contents.Article object at 0x7fb5b48eb850>, <pelican.contents.Article object at 0x7fb5b48eb5d0>, <pelican.contents.Article object at 0x7fb5b4aa0c90>, <pelican.contents.Article object at 0x7fb5b4ca11d0>, <pelican.contents.Article object at 0x7fb5b4afdb50>])
+					<li><a href='http://blog.lucywyman.me/(<Category-u'Experiences'>,-[<pelican.contents.Article-object-at-0x7f8324a04450>,-<pelican.contents.Article-object-at-0x7f8324984bd0>,-<pelican.contents.Article-object-at-0x7f8324b344d0>,-<pelican.contents.Article-object-at-0x7f8324cabed0>,-<pelican.contents.Article-object-at-0x7f8324bcdc50>]).html'>
+							(<Category u'Experiences'>, [<pelican.contents.Article object at 0x7f8324a04450>, <pelican.contents.Article object at 0x7f8324984bd0>, <pelican.contents.Article object at 0x7f8324b344d0>, <pelican.contents.Article object at 0x7f8324cabed0>, <pelican.contents.Article object at 0x7f8324bcdc50>])
 						</a>
 					</li>
-					<li><a href='http://blog.lucywyman.me/(<Category-u'Loves'>,-[<pelican.contents.Article-object-at-0x7fb5b4a03350>,-<pelican.contents.Article-object-at-0x7fb5b4a1a550>,-<pelican.contents.Article-object-at-0x7fb5b4b3ac50>,-<pelican.contents.Article-object-at-0x7fb5b48eb410>]).html'>
-							(<Category u'Loves'>, [<pelican.contents.Article object at 0x7fb5b4a03350>, <pelican.contents.Article object at 0x7fb5b4a1a550>, <pelican.contents.Article object at 0x7fb5b4b3ac50>, <pelican.contents.Article object at 0x7fb5b48eb410>])
+					<li><a href='http://blog.lucywyman.me/(<Category-u'Loves'>,-[<pelican.contents.Article-object-at-0x7f8324984c90>,-<pelican.contents.Article-object-at-0x7f8324a20810>,-<pelican.contents.Article-object-at-0x7f8324c14dd0>,-<pelican.contents.Article-object-at-0x7f8324a04c50>]).html'>
+							(<Category u'Loves'>, [<pelican.contents.Article object at 0x7f8324984c90>, <pelican.contents.Article object at 0x7f8324a20810>, <pelican.contents.Article object at 0x7f8324c14dd0>, <pelican.contents.Article object at 0x7f8324a04c50>])
 						</a>
 					</li>
-					<li><a href='http://blog.lucywyman.me/(<Category-u'Recommendations'>,-[<pelican.contents.Article-object-at-0x7fb5b4a1add0>]).html'>
-							(<Category u'Recommendations'>, [<pelican.contents.Article object at 0x7fb5b4a1add0>])
+					<li><a href='http://blog.lucywyman.me/(<Category-u'Recommendations'>,-[<pelican.contents.Article-object-at-0x7f8324a35810>]).html'>
+							(<Category u'Recommendations'>, [<pelican.contents.Article object at 0x7f8324a35810>])
 						</a>
 					</li>
 				</ul>
@@ -59,7 +59,7 @@ ga('send', 'pageview');
 		<main>
     <h1>Authors on blog</h1>
 
-    <ul>        <li><a href="http://blog.lucywyman.me/author/lucy-wyman.html">Lucy Wyman</a> (19)</li>
+    <ul>        <li><a href="http://blog.lucywyman.me/author/lucy-wyman.html">Lucy Wyman</a> (20)</li>
     </ul>
 		</main>
 		<div class='footer'>
