Add me before you

--- a/archives.html
+++ b/archives.html
@@ -33,24 +33,24 @@ ga('send', 'pageview');
 				<li><a href='http://blog.lucywyman.me/about.html'>About</a></li>
 				<li><a href='http://blog.lucywyman.me/categories.html'>Categories &#8964;</a>
 				<ul>
-					<li><a href='http://blog.lucywyman.me/(<Category-u'Book-Review'>,-[<pelican.contents.Article-object-at-0x7f6c34a861d0>,-<pelican.contents.Article-object-at-0x7f6c348a5590>,-<pelican.contents.Article-object-at-0x7f6c34a0d090>,-<pelican.contents.Article-object-at-0x7f6c347753d0>,-<pelican.contents.Article-object-at-0x7f6c3485af50>,-<pelican.contents.Article-object-at-0x7f6c34a5ff50>,-<pelican.contents.Article-object-at-0x7f6c34a1c750>,-<pelican.contents.Article-object-at-0x7f6c34974350>,-<pelican.contents.Article-object-at-0x7f6c34734d50>]).html'>
-							(<Category u'Book Review'>, [<pelican.contents.Article object at 0x7f6c34a861d0>, <pelican.contents.Article object at 0x7f6c348a5590>, <pelican.contents.Article object at 0x7f6c34a0d090>, <pelican.contents.Article object at 0x7f6c347753d0>, <pelican.contents.Article object at 0x7f6c3485af50>, <pelican.contents.Article object at 0x7f6c34a5ff50>, <pelican.contents.Article object at 0x7f6c34a1c750>, <pelican.contents.Article object at 0x7f6c34974350>, <pelican.contents.Article object at 0x7f6c34734d50>])
+					<li><a href='http://blog.lucywyman.me/(<Category-u'Book-Review'>,-[<pelican.contents.Article-object-at-0x7f4ee6e1c2d0>,-<pelican.contents.Article-object-at-0x7f4ee71a31d0>,-<pelican.contents.Article-object-at-0x7f4ee6fc2590>,-<pelican.contents.Article-object-at-0x7f4ee712a090>,-<pelican.contents.Article-object-at-0x7f4ee6e1c190>,-<pelican.contents.Article-object-at-0x7f4ee6f77f50>,-<pelican.contents.Article-object-at-0x7f4ee717cf50>,-<pelican.contents.Article-object-at-0x7f4ee7139750>,-<pelican.contents.Article-object-at-0x7f4ee7091350>,-<pelican.contents.Article-object-at-0x7f4ee6d877d0>]).html'>
+							(<Category u'Book Review'>, [<pelican.contents.Article object at 0x7f4ee6e1c2d0>, <pelican.contents.Article object at 0x7f4ee71a31d0>, <pelican.contents.Article object at 0x7f4ee6fc2590>, <pelican.contents.Article object at 0x7f4ee712a090>, <pelican.contents.Article object at 0x7f4ee6e1c190>, <pelican.contents.Article object at 0x7f4ee6f77f50>, <pelican.contents.Article object at 0x7f4ee717cf50>, <pelican.contents.Article object at 0x7f4ee7139750>, <pelican.contents.Article object at 0x7f4ee7091350>, <pelican.contents.Article object at 0x7f4ee6d877d0>])
 						</a>
 					</li>
-					<li><a href='http://blog.lucywyman.me/(<Category-u'Conferences'>,-[<pelican.contents.Article-object-at-0x7f6c34985e50>]).html'>
-							(<Category u'Conferences'>, [<pelican.contents.Article object at 0x7f6c34985e50>])
+					<li><a href='http://blog.lucywyman.me/(<Category-u'Conferences'>,-[<pelican.contents.Article-object-at-0x7f4ee70a2e50>]).html'>
+							(<Category u'Conferences'>, [<pelican.contents.Article object at 0x7f4ee70a2e50>])
 						</a>
 					</li>
-					<li><a href='http://blog.lucywyman.me/(<Category-u'Experiences'>,-[<pelican.contents.Article-object-at-0x7f6c34775450>,-<pelican.contents.Article-object-at-0x7f6c346f5bd0>,-<pelican.contents.Article-object-at-0x7f6c348a54d0>,-<pelican.contents.Article-object-at-0x7f6c34a1ced0>,-<pelican.contents.Article-object-at-0x7f6c3493ec50>]).html'>
-							(<Category u'Experiences'>, [<pelican.contents.Article object at 0x7f6c34775450>, <pelican.contents.Article object at 0x7f6c346f5bd0>, <pelican.contents.Article object at 0x7f6c348a54d0>, <pelican.contents.Article object at 0x7f6c34a1ced0>, <pelican.contents.Article object at 0x7f6c3493ec50>])
+					<li><a href='http://blog.lucywyman.me/(<Category-u'Experiences'>,-[<pelican.contents.Article-object-at-0x7f4ee6e1c150>,-<pelican.contents.Article-object-at-0x7f4ee6e1c850>,-<pelican.contents.Article-object-at-0x7f4ee6fc24d0>,-<pelican.contents.Article-object-at-0x7f4ee7139ed0>,-<pelican.contents.Article-object-at-0x7f4ee705bc50>]).html'>
+							(<Category u'Experiences'>, [<pelican.contents.Article object at 0x7f4ee6e1c150>, <pelican.contents.Article object at 0x7f4ee6e1c850>, <pelican.contents.Article object at 0x7f4ee6fc24d0>, <pelican.contents.Article object at 0x7f4ee7139ed0>, <pelican.contents.Article object at 0x7f4ee705bc50>])
 						</a>
 					</li>
-					<li><a href='http://blog.lucywyman.me/(<Category-u'Loves'>,-[<pelican.contents.Article-object-at-0x7f6c346f5c90>,-<pelican.contents.Article-object-at-0x7f6c34791810>,-<pelican.contents.Article-object-at-0x7f6c34985dd0>,-<pelican.contents.Article-object-at-0x7f6c34775c50>]).html'>
-							(<Category u'Loves'>, [<pelican.contents.Article object at 0x7f6c346f5c90>, <pelican.contents.Article object at 0x7f6c34791810>, <pelican.contents.Article object at 0x7f6c34985dd0>, <pelican.contents.Article object at 0x7f6c34775c50>])
+					<li><a href='http://blog.lucywyman.me/(<Category-u'Loves'>,-[<pelican.contents.Article-object-at-0x7f4ee6d87dd0>,-<pelican.contents.Article-object-at-0x7f4ee6eae810>,-<pelican.contents.Article-object-at-0x7f4ee70a2dd0>,-<pelican.contents.Article-object-at-0x7f4ee6e92ed0>]).html'>
+							(<Category u'Loves'>, [<pelican.contents.Article object at 0x7f4ee6d87dd0>, <pelican.contents.Article object at 0x7f4ee6eae810>, <pelican.contents.Article object at 0x7f4ee70a2dd0>, <pelican.contents.Article object at 0x7f4ee6e92ed0>])
 						</a>
 					</li>
-					<li><a href='http://blog.lucywyman.me/(<Category-u'Recommendations'>,-[<pelican.contents.Article-object-at-0x7f6c347a6810>]).html'>
-							(<Category u'Recommendations'>, [<pelican.contents.Article object at 0x7f6c347a6810>])
+					<li><a href='http://blog.lucywyman.me/(<Category-u'Recommendations'>,-[<pelican.contents.Article-object-at-0x7f4ee6ec3810>]).html'>
+							(<Category u'Recommendations'>, [<pelican.contents.Article object at 0x7f4ee6ec3810>])
 						</a>
 					</li>
 				</ul>
@@ -60,6 +60,8 @@ ga('send', 'pageview');
 <h1>Archives for blog</h1>
 
 <dl>
+    <dt>06.1.2016</dt>
+    <dd><a href="http://blog.lucywyman.me/me-before-you.html">Book Review: Me Before You</a></dd>
     <dt>05.30.2016</dt>
     <dd><a href="http://blog.lucywyman.me/everybody-rise.html">Book Review: Everybody Rise</a></dd>
     <dt>05.23.2016</dt>
